--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ DB_PASSWORD=
 DB_NAME=order_assignment
 DB_PORT=3306
 DB_HOST=127.0.0.1
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+CLOUDINARY_UPLOAD_FOLDER=
